--- a/ghost-trades/style.css
+++ b/ghost-trades/style.css
@@ -2562,7 +2562,7 @@ h4 {
     }
 }
 
-@media (max-width: 640px) {
+@media (max-width: 768px) {
     header {
         padding: 0 !important;
         overflow: visible !important;
